# vimus

./: .ghci  .gitignore  .travis.yml  LICENSE  README.markdown  Setup.lhs  TODO  ghci  push.sh  stack.yaml  vimus.cabal
bash_completion.d/: vimus
driver/: Main.hs
ncursesw/: LICENSE  README  Setup.hs  ncursesw.cabal
ncursesw/src/: Constant.hsc  Curses.chs  CursesInput.chs  CursesUtil.hs  Input.chs  Key.hsc  Misc.chs  Type.chs  Util.hs  cbits.c  mycurses.h  mycurses.h.arch
ncursesw/src/UI/: Curses.hs
ncursesw/src/UI/Curses/: Key.hs  Key.hsc  Type.chs
resource/: default-mappings  emacs-mappings
src/: .ghci  Command.hs  CommandParser.hs  Content.hs  Input.hs  Instances.hs  Key.hs  ListWidget.hs  Macro.hs  Main.hs  Option.hs  PlaybackState.hs  Queue.hs  Render.hs  Ruler.hs  Run.hs  Song.hs  Tab.hs  TextWidget.hs  Timer.hs  Type.hs  Util.hs  Vimus.hs  Widget.hs  WindowLayout.hs
src/Command/: Command.hs  Completion.hs  Core.hs  Help.hs  Parser.hs  Type.hs
src/Data/List/: Pointed.hs  Zipper.hs
src/Song/: Format.hs
src/Vimus/: Command.hs  Input.hs  Key.hs  Macro.hs  Queue.hs  Render.hs  Ruler.hs  Run.hs  Song.hs  Tab.hs  Type.hs  Util.hs  WindowLayout.hs
src/Vimus/Command/: Completion.hs  Core.hs  Help.hs  Parser.hs  Type.hs
src/Vimus/Song/: Format.hs
src/Vimus/Widget/: HelpWidget.hs  ListWidget.hs  TextWidget.hs  Type.hs
src/Widget/: HelpWidget.hs  ListWidget.hs  TextWidget.hs  Type.hs
test/: .ghci  CommandSpec.hs  FormatSpec.hs  InputSpec.hs  KeySpec.hs  ListWidgetSpec.hs  ListWidgetTest.hs  MacroSpec.hs  QueueSpec.hs  RenderSpec.hs  RulerSpec.hs  RunSpec.hs  Spec.hs  TabSpec.hs  UtilSpec.hs  run.sh
test/Command/: CommandSpec.hs  CompletionSpec.hs  CoreSpec.hs  HelpSpec.hs  ParserSpec.hs
test/Song/: FormatSpec.hs
test/Vimus/: CommandSpec.hs  InputSpec.hs  KeySpec.hs  MacroSpec.hs  QueueSpec.hs  RenderSpec.hs  RulerSpec.hs  RunSpec.hs  TabSpec.hs  UtilSpec.hs
test/Vimus/Command/: CompletionSpec.hs  CoreSpec.hs  HelpSpec.hs  ParserSpec.hs
test/Vimus/Song/: FormatSpec.hs
test/Vimus/Widget/: ListWidgetSpec.hs
test/Widget/: ListWidgetSpec.hs
tests/: CommandSpec.hs  ListWidgetTest.hs  MacroSpec.hs  Spec.hs  TabSpec.hs  run.sh
zsh_completion/: _vimus
