name:             vimus
version:          0.0.0
synopsis:         An MPD client with vim-like key bindings
category:         Sound
license:          MIT
license-file:     LICENSE
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.10

data-dir:
    resource
data-files:
    default-mappings
    emacs-mappings

source-repository head
    type:            git
    location:        git://github.com/sol/vimus.git


executable vimus
  default-language: Haskell2010
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind
    -threaded

  build-depends:
      base        == 4.*
    , ncursesw    == 0.0.0
    , wcwidth
    , libmpd      == 0.9.*
    , mtl         >= 2 && < 2.2
    , containers  >= 0.4 && < 0.6
    , deepseq
    , time
    , old-locale
    , process
    , filepath
    , directory
    , data-default
    , template-haskell

  hs-source-dirs:
      src

  main-is:
    Main.hs

  other-modules:
    Run
    Command
    Command.Type
    Command.Core
    Command.Help
    Command.Completion
    Command.Parser
    Content
    Input
    Key
    Ruler
    Widget.Type
    Widget.TextWidget
    Widget.ListWidget
    Widget.HelpWidget
    Macro
    Option
    PlaybackState
    Queue
    Song
    Tab
    Timer
    Type
    Util
    Vimus
    Render
    WindowLayout
    Paths_vimus
    Data.List.Pointed
    Data.List.Zipper

test-suite spec
  default-language: Haskell2010
  type:
      exitcode-stdio-1.0
  main-is:
      Spec.hs
  ghc-options:
      -Wall
      -Werror
      -fno-warn-unused-do-bind
      -threaded

  cpp-options:
      -DTEST

  hs-source-dirs:
      src
    , test
  build-depends:
      base        == 4.*
    , ncursesw    == 0.0.0
    , wcwidth
    , libmpd      == 0.9.*
    , mtl         >= 2 && < 2.2
    , containers  == 0.4.*
    , deepseq
    , time
    , old-locale
    , process
    , filepath
    , directory
    , data-default
    , template-haskell

    , hspec >= 1.3
    , hspec-expectations
    , transformers
    , QuickCheck
