name:             vimus
version:          0.2.1.1
synopsis:         An MPD client with vim-like key bindings
description:      An MPD client with vim-like key bindings
                  .
                  <https://github.com/vimus/vimus#readme>
category:         Sound
license:          MIT
license-file:     LICENSE
copyright:        (c) 2010-2014 Simon Hengel,
                  (c) 2010-2014 Markus Klinik,
                  (c) 2012-2014 Niklas Haas,
                  (c) 2012-2014 Joachim Fasting,
                  (c) 2012-2014 Sylvain Henry,
                  (c) 2013-2014 Matvey Aksenov
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.10

data-dir:
      resource
data-files:
      default-mappings
      emacs-mappings

extra-source-files:
      ncursesw/src/mycurses.h

source-repository head
  type: git
  location: https://github.com/vimus/vimus

library
  exposed: False
  default-language: Haskell2010
  ghc-options: -Wall

  build-depends:
      base >= 4.7 && < 5
    , bytestring
    , utf8-string
    , wcwidth
    , libmpd == 0.9.*
    , mtl >= 2
    , containers >= 0.5 && < 0.7
    , deepseq
    , time
    , old-locale
    , process
    , filepath
    , directory
    , data-default
    , template-haskell
    , time-locale-compat
  hs-source-dirs:
      src
    , ncursesw/src
  exposed-modules:
      Vimus.Run
      Vimus.Command
      Vimus.Command.Type
      Vimus.Command.Core
      Vimus.Command.Help
      Vimus.Command.Completion
      Vimus.Command.Parser
      Vimus.Input
      Vimus.Key
      Vimus.Ruler
      Vimus.Widget.Type
      Vimus.Widget.ListWidget
      Vimus.Widget.TextWidget
      Vimus.Widget.HelpWidget
      Vimus.Macro
      Vimus.Queue
      Vimus.Util
      Vimus.Type
      Vimus.Render
      Vimus.WindowLayout
      Vimus.Song
      Vimus.Song.Format
      Vimus.Tab
  other-modules:
      Content
      Option
      PlaybackState
      Timer
      Instances
      Paths_vimus
      Data.List.Pointed
      Data.List.Zipper

  -- ncursesw
  build-tools: c2hs
  extra-libraries: ncursesw
  include-dirs: /usr/include/ncursesw ncursesw/src
  includes: mycurses.h
  c-sources: ncursesw/src/cbits.c

  exposed-modules:
      UI.Curses
      UI.Curses.Key
      UI.Curses.Type
  other-modules:
      Curses
      Constant
      CursesUtil
      Misc
      CursesInput

executable vimus
  default-language: Haskell2010
  ghc-options: -Wall -threaded
  main-is: Main.hs
  hs-source-dirs: driver
  build-depends:
      base >= 4.7 && < 5
    , vimus

test-suite spec
  default-language: Haskell2010
  ghc-options: -Wall -threaded
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  build-depends:
      base >= 4.7 && < 5
    , vimus
    , data-default
    , wcwidth
    , mtl

    , hspec >= 1.3
    , hspec-expectations
    , transformers
    , QuickCheck
