name:           ncursesw
version:        0.0.0
cabal-version:  >= 1.2
build-type:     Simple


extra-source-files:
  src/mycurses.h

flag arch
  description: use 'ncurses.h' instead 'ncursesw/ncurses.h' (this is required for Arch Linux)
  default:     False

library

  if flag(arch)
    cpp-options: -DARCH

--  ghc-options:
--    -Wall

  build-depends:
      base == 4.*
    , bytestring
    , utf8-string

  extra-libraries:
    ncursesw
    -- ncursesw_g -- debug lib

  c-sources:
    src/cbits.c

  includes:
    mycurses.h

  include-dirs:
    src/

  hs-source-dirs:
    src

  exposed-modules:
      UI.Curses
      UI.Curses.Key
      UI.Curses.Type

  other-modules:
    Curses
    Constant
    CursesUtil
    Misc
    CursesInput
