name:             ncursesw
version:          0.0.0
license:          MIT
license-file:     LICENSE
build-type:       Simple
cabal-version:    >= 1.10

extra-source-files:
  src/mycurses.h

library

--  ghc-options:
--    -Wall

  build-depends:
      base == 4.*
    , bytestring
    , utf8-string

  build-tools:
      c2hs

  extra-libraries:
    ncursesw
    -- ncursesw_g -- debug lib

  c-sources:
    src/cbits.c

  include-dirs:
    src/

  hs-source-dirs:
    src

  exposed-modules:
      UI.Curses
      UI.Curses.Key
      UI.Curses.Type

  other-modules:
    Curses
    Constant
    CursesUtil
    Misc
    CursesInput
